[package]
name = "sweeper"
version = "0.1.0"
authors = ["Javier <javierhonduco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "*"
# bcc = {path = "/home/javierhonduco/rust-bcc"}
ctrlc = "*"
rusqlite = "*"
