[package]
name = "sweeper"
version = "0.1.0"
authors = ["Javier <javierhonduco@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = {version = "0.20.1"}
ctrlc = "*"
rusqlite = "*"

[build-dependencies]
libbpf-cargo = "0.20.1"
